--- a/locale/de.json
+++ b/locale/de.json
@@ -7,6 +7,7 @@
 	"common.actions.save": "Speichern",
 	"common.actions.scrollToTop": "Nach oben scrollen",
 	"common.labels.birthdate": "Geburtsdatum",
+	"common.labels.classes": "Klassen",
 	"common.labels.consent": "Einverständnis",
 	"common.labels.createdAt": "Erstellungsdatum",
 	"common.labels.email": "E-Mail",
