add teacher administration

--- a/locale/de.json
+++ b/locale/de.json
@@ -8,6 +8,7 @@
 	"common.actions.scrollToTop": "Nach oben scrollen",
 	"common.labels.birthdate": "Geburtsdatum",
 	"common.labels.consent": "Einverständnis",
+	"common.labels.classes": "Klasse(n)",
 	"common.labels.createdAt": "Erstellungsdatum",
 	"common.labels.email": "E-Mail",
 	"common.labels.firstName": "Vorname",
@@ -141,8 +142,14 @@
 	"pages.administration.students.new.denied": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
-	"pages.administration.index.title": "Administration",
 	"pages.administration.students.index.title": "Verwalte Schüler:innen",
+	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
+	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
+	"pages.administration.teachers.index.title": "Verwalte Lehrer:innen",
+	"pages.administration.teachers.new.title": "Lehrer:in hinzufügen",
+	"pages.administration.teachers.new.checkbox.label": "Registrierungslink an Lehrer:in senden",
+	"pages.administration.teachers.new.denied": "Lehrer:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
+	"pages.administration.teachers.new.success": "Lehrer:in erfolgreich angelegt!",
 	"pages.content.empty_state.error.message": "Wir konnten leider nichts finden, bitte suche erneut.",
 	"pages.content.empty_state.error.oops": "Oops",
 	"pages.content.index.search_for": "Suche nach …",
