--- a/locale/de.json
+++ b/locale/de.json
@@ -1,7 +1,7 @@
 {
 	"common.actions.add": "Hinzufügen",
-	"common.actions.cancel": "Abbrechen",
 	"common.actions.back": "Zurück",
+	"common.actions.cancel": "Abbrechen",
 	"common.actions.discard": "Verwerfen",
 	"common.actions.remove": "Löschen",
 	"common.actions.save": "Speichern",
@@ -16,26 +16,22 @@
 	"common.labels.name": "Name",
 	"common.labels.room": "Raum",
 	"common.labels.status": "Status",
+	"common.labels.teacher": "Lehrer:in",
 	"common.placeholder.birthdate": "20.2.2002",
 	"common.placeholder.email": "clara.fall@mail.de",
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
-	"common.labels.teacher": "Lehrer:in",
-	"components.legacy.footer.powered_by": "Powered by",
-	"components.legacy.footer.lokalise_logo_alt": "lokalise.com Logo",
-	"components.legacy.footer.privacy_policy": "Datenschutzerklärung",
-	"components.legacy.footer.imprint": "Impressum",
-	"components.legacy.footer.contact": "Kontakt",
-	"components.legacy.footer.team": "Team",
-	"components.legacy.footer.about": "Über das Projekt",
-	"components.legacy.footer.contribute": "Mitmachen",
-	"components.legacy.footer.partner": "Partner",
-	"components.legacy.footer.terms": "Nutzungsordnung",
-	"components.molecules.admintablelegend.help": "Hilfebereich",
-	"components.molecules.adminfooterlegend.title": "Legende",
-	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
-	"components.molecules.admintablelegend.externalSync": "Deine Daten werden mit einer externen Datenquelle synchronisiert. Die manuelle Bearbeitung der Tabelle ist deshalb nicht möglich. Finde weitere Informationen im",
 	"componente.molecules.CoursesGrid.emptystate": "Aktuell gibt es hier noch keine Kurse.",
+	"components.legacy.footer.about": "Über das Projekt",
+	"components.legacy.footer.contact": "Kontakt",
+	"components.legacy.footer.contribute": "Mitmachen",
+	"components.legacy.footer.imprint": "Impressum",
+	"components.legacy.footer.lokalise_logo_alt": "lokalise.com Logo",
+	"components.legacy.footer.partner": "Partner",
+	"components.legacy.footer.powered_by": "Powered by",
+	"components.legacy.footer.privacy_policy": "Datenschutzerklärung",
+	"components.legacy.footer.team": "Team",
+	"components.legacy.footer.terms": "Nutzungsordnung",
 	"components.molecules.ContentCard.report.body": "Melden des Inhaltes mit der ID",
 	"components.molecules.ContentCard.report.email": "inhalte@schul-cloud.org",
 	"components.molecules.ContentCard.report.subject": "Liebes Team, hiermit möchte ich den im Betreff genannten Inhalt melden, da: [hier bitte Ihre Gründe]",
@@ -46,6 +42,10 @@
 	"components.molecules.ContextMenu.action.close": "Kontextmenü schließen",
 	"components.molecules.MintEcFooter.chapters": "Kapitelübersicht",
 	"components.molecules.TextEditor.noLocalFiles": "Lokale Dateien werden aktuell nicht unterstützt.",
+	"components.molecules.adminfooterlegend.title": "Legende",
+	"components.molecules.admintablelegend.externalSync": "Deine Daten werden mit einer externen Datenquelle synchronisiert. Die manuelle Bearbeitung der Tabelle ist deshalb nicht möglich. Finde weitere Informationen im",
+	"components.molecules.admintablelegend.help": "Hilfebereich",
+	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
 	"components.organisms.AutoLogoutWarning.confirm": "Sitzung verlängern",
 	"components.organisms.AutoLogoutWarning.error": "Uups… das hätte nicht passieren dürfen! Deine Sitzung konnte nicht verlängert werden. Bitte versuche es gleich noch einmal.",
 	"components.organisms.AutoLogoutWarning.error.401": "Deine Sitzung ist bereits abgelaufen. Bitte melde dich erneut an.",
@@ -63,6 +63,14 @@
 	"components.organisms.DatasourceRunWebuntis.loading": "Lade Daten...",
 	"components.organisms.DatasourceRunWebuntis.numberOfImported": "{imported}/{total} Datensätze importiert",
 	"components.organisms.DatasourceRunWebuntis.unknown": "Status unbekannt",
+	"components.organisms.FormDatasourceLoginWebuntis.schoolname.label": "Schulname",
+	"components.organisms.FormDatasourceLoginWebuntis.schoolname.placeholder": "WebUntis Schulname",
+	"components.organisms.FormDatasourceLoginWebuntis.username.label": "Benutzername",
+	"components.organisms.FormDatasourceLoginWebuntis.username.placeholder": "WebUntis Nutzername",
+	"components.organisms.FormDatasourceLoginWebuntis.password.label": "Passwort",
+	"components.organisms.FormDatasourceLoginWebuntis.password.placeholder": "WebUntis Passwort",
+	"components.organisms.FormDatasourceLoginWebuntis.url.label": "URL",
+	"components.organisms.FormDatasourceLoginWebuntis.url.placeholder": "https://webuntis.domain",
 	"components.organisms.FormDatasourceLoginWebuntis.error.text": "Es ist ein Fehler bei der Verbindung aufgetreten. Möglicherweise haben sich deine Zugangsdaten geändert. Bitte überprüfe deine Eingabe.",
 	"components.organisms.FormDatasourcesLogin.btn.connect": "Datenquelle anlegen",
 	"components.organisms.FormDatasourcesLogin.btn.update": "Aktualisiere die Datenquelle",
@@ -108,13 +116,15 @@
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In Arbeit",
 	"pages.administraion.datasources.index.success": "Letzter Import: {relativeDate}",
-	"pages.administration.datasources._id.run._id.dialog.loading.description": "Dies kann bis zu einer Minute dauern. Wir bitten um etwas Geduld...",
+	"pages.administration.datasources._id.run._id.dialog.loading.description": "Dies kann einige Minuten dauern. Wir bitten um etwas Geduld...",
 	"pages.administration.datasources._id.run._id.dialog.loading.title": "Die Daten werden geladen...",
 	"pages.administration.datasources._id.run._id.error": "Die Synchronisierung ist leider fehlgeschlagen.",
 	"pages.administration.datasources._id.run._id.error.unknown_datasource": "Die Datenquelle kann nicht geladen werden.",
 	"pages.administration.datasources.index.create": "Neue Datenquelle hinzufügen",
 	"pages.administration.datasources.index.ctxActions.edit": "Zugangsdaten ändern",
+	"pages.administration.datasources.index.ctxActions.import": "Daten importieren",
 	"pages.administration.datasources.index.ctxActions.remove": "Datenquelle entfernen",
+	"pages.administration.datasources.index.edit": "Zugangsdaten ändern",
 	"pages.administration.datasources.index.empty": "Es sind noch keine Datenquellen vorhanden. Klicke auf den Plus-Button unten rechts um eine neue Datenquelle hinzuzufügen.",
 	"pages.administration.datasources.index.emptyText": "Es sind noch keine Datenquellen vorhanden. Mit dem Plus-Button unten rechts kannst du eine Datenquelle hinzufügen.",
 	"pages.administration.datasources.index.import": "Daten importieren",
@@ -139,25 +149,25 @@
 	"pages.administration.index.title": "Administration",
 	"pages.administration.students.fab.add": "Schüler:in anlegen",
 	"pages.administration.students.fab.import": "Schüler:innen importieren",
-	"pages.administration.students.legend.icon.danger": "Keine Einverständniserklärungen vorhanden",
-	"pages.administration.students.legend.icon.success": "Alle Einverständniserklärungen vorhanden",
-	"pages.administration.students.legend.icon.warning": " Eltern haben zugestimmt",
 	"pages.administration.students.index.tableActions.consent": "Analoge Einverständniserklärung",
 	"pages.administration.students.index.tableActions.delete": "Löschen",
 	"pages.administration.students.index.tableActions.email": "Registrierungslinks per E-Mail versenden",
 	"pages.administration.students.index.tableActions.qr": "Registrierungslinks als QR-Code ausdrucken",
+	"pages.administration.students.index.title": "Verwalte Schüler:innen",
+	"pages.administration.students.legend.icon.danger": "Keine Einverständniserklärungen vorhanden",
+	"pages.administration.students.legend.icon.success": "Alle Einverständniserklärungen vorhanden",
+	"pages.administration.students.legend.icon.warning": " Eltern haben zugestimmt",
 	"pages.administration.students.new.checkbox.label": "Registrierungslink an Schüler:in senden",
 	"pages.administration.students.new.denied": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
-	"pages.administration.students.index.title": "Verwalte Schüler:innen",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
 	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
-	"pages.administration.teachers.index.title": "Verwalte Lehrer:innen",
 	"pages.administration.teachers.index.tableActions.consent": "Analoge Einverständniserklärung",
 	"pages.administration.teachers.index.tableActions.delete": "Löschen",
 	"pages.administration.teachers.index.tableActions.email": "Registrierungslinks per E-Mail versenden",
 	"pages.administration.teachers.index.tableActions.qr": "Registrierungslinks als QR-Code ausdrucken",
+	"pages.administration.teachers.index.title": "Verwalte Lehrer:innen",
 	"pages.administration.teachers.legend.icon.check": "Alle Zustimmungen vorhanden",
 	"pages.content.empty_state.error.message": "Wir konnten leider nichts finden, bitte suche erneut.",
 	"pages.content.empty_state.error.oops": "Oops",
