rename language key

--- a/locale/de.json
+++ b/locale/de.json
@@ -148,7 +148,7 @@
 	"pages.administration.students.legend.icon.success": "Alle Einverständniserklärungen vorhanden",
 	"pages.administration.students.legend.icon.warning": " Eltern haben zugestimmt",
 	"pages.administration.students.new.checkbox.label": "Registrierungslink an Schüler:in senden",
-	"pages.administration.students.new.denied": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
+	"pages.administration.students.new.error": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
@@ -160,7 +160,7 @@
 	"pages.administration.teachers.index.title": "Verwalte Lehrer:innen",
 	"pages.administration.teachers.legend.icon.check": "Alle Zustimmungen vorhanden",
 	"pages.administration.teachers.new.checkbox.label": "Registrierungslink an Lehrer:in senden",
-	"pages.administration.teachers.new.denied": "Lehrer:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
+	"pages.administration.teachers.new.error": "Lehrer:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.teachers.new.success": "Lehrer:in erfolgreich angelegt!",
 	"pages.administration.teachers.new.title": "Lehrer:in hinzufügen",
 	"pages.content.empty_state.error.message": "Wir konnten leider nichts finden, bitte suche erneut.",
