--- a/locale/de.json
+++ b/locale/de.json
@@ -94,6 +94,15 @@
 	"components.organisms.FormNews.success.remove": "Artikel erfolgreich gelöscht.",
 	"components.organisms.LegacyFooter.contact": "Kontakt",
 	"components.organisms.LegacyFooter.job-offer": "Stellenausschreibungen",
+	"components.organisms.Pagination.currentPage": "{start} bis {end} von {total}",
+	"components.organisms.Pagination.perPage": "pro Seite",
+	"components.organisms.Pagination.perPage.10": "10 pro Seite",
+	"components.organisms.Pagination.perPage.100": "100 pro Seite",
+	"components.organisms.Pagination.perPage.25": "25 pro Seite",
+	"components.organisms.Pagination.perPage.5": "5 pro Seite",
+	"components.organisms.Pagination.perPage.50": "50 pro Seite",
+	"components.organisms.Pagination.recordsPerPage": "Einträge pro Seite",
+	"components.organisms.Pagination.showTotalRecords": "Zeige alle {total} Einträge",
 	"error.400": "400 – fehlerhafte Anfrage",
 	"error.401": "401 – das dürfen wir dir leider nicht zeigen",
 	"error.404": "404 – Seite nicht gefunden",
