add manual consent page

--- a/locale/de.json
+++ b/locale/de.json
@@ -151,6 +151,10 @@
 	"pages.administration.students.new.error": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
+	"pages.administration.students.consent.title": "Analoge Registrierung",
+	"pages.administration.students.consent.steps.confirm": "Bestätigen",
+	"pages.administration.students.consent.steps.logins": "Zugangsdaten",
+	"pages.administration.students.consent.steps.finish": "Abschließen",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
 	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
 	"pages.administration.teachers.index.tableActions.consent": "Analoge Einverständniserklärung",
