--- a/locale/de.json
+++ b/locale/de.json
@@ -8,6 +8,7 @@
 	"common.actions.scrollToTop": "Nach oben scrollen",
 	"common.labels.birthdate": "Geburtsdatum",
 	"common.labels.classes": "Klasse(n)",
+	"common.labels.complete.firstName": "Vollständiger Vorname",
 	"common.labels.consent": "Einverständnis",
 	"common.labels.createdAt": "Erstellungsdatum",
 	"common.labels.email": "E-Mail",
@@ -21,6 +22,7 @@
 	"common.placeholder.email": "clara.fall@mail.de",
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
+	"common.words.and": "und",
 	"componente.molecules.CoursesGrid.emptystate": "Aktuell gibt es hier noch keine Kurse.",
 	"components.legacy.footer.about": "Über das Projekt",
 	"components.legacy.footer.contact": "Kontakt",
@@ -194,5 +196,24 @@
 	"pages.news.new.create": "Erstellen",
 	"pages.news.new.title": "Erstelle eine Neuigkeit",
 	"pages.news.title": "Neuigkeiten",
+	"utils.adminFilter.consent": "Einverständniserklärung:",
+	"utils.adminFilter.consent.label.missing": "Keine Einverständniserklärungen vorhanden",
+	"utils.adminFilter.consent.label.ok": "Alle Einverständniserklärungen vorhanden",
+	"utils.adminFilter.consent.label.parentsAgreed": "Eltern haben zugestimmt",
+	"utils.adminFilter.consent.missing": "nicht vorhanden",
+	"utils.adminFilter.consent.ok": "vollständig",
+	"utils.adminFilter.consent.parentsAgreed": "nur Eltern haben zugestimmt",
+	"utils.adminFilter.consent.title": "Einverständniserklärungen",
+	"utils.adminFilter.date.created": "Erstellt zwischen",
+	"utils.adminFilter.date.label.until": "Erstellungsdatum bis",
+	"utils.adminFilter.date.label.from": "Erstellungsdatum von",
+	"utils.adminFilter.date.title": "Erstellungsdatum",
+	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
+	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
+	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020",
+	"utils.adminFilter.teacher.consent.label.missing": "Keine Einverständniserklärung vorhanden",
+	"utils.adminFilter.teacher.consent.label.ok": "Einverständniserklärung vorhanden",
+	"utils.adminFilter.teacher.consent.title": "Einverständniserklärung",
+	"utils.adminFilter.teacher.consent.ok": "vorhanden",
 	"storybook.lang": "Ich bin jetzt auf Deutsch!"
 }
