--- a/locale/de.json
+++ b/locale/de.json
@@ -9,6 +9,7 @@
 	"common.labels.birthdate": "Geburtsdatum",
 	"common.labels.classes": "Klasse(n)",
 	"common.labels.complete.firstName": "Vollständiger Vorname",
+	"common.labels.complete.lastName": "Vollständiger Nachname",
 	"common.labels.consent": "Einverständnis",
 	"common.labels.createdAt": "Erstellungsdatum",
 	"common.labels.email": "E-Mail",
@@ -217,6 +218,7 @@
 	"utils.adminFilter.date.label.until": "Erstellungsdatum bis",
 	"utils.adminFilter.date.label.from": "Erstellungsdatum von",
 	"utils.adminFilter.date.title": "Erstellungsdatum",
+	"utils.adminFilter.placeholder.complete.lastname": "Nach vollständigem Nachnamen filtern...",
 	"utils.adminFilter.placeholder.complete.name": "Nach vollständigem Vornamen filtern...",
 	"utils.adminFilter.placeholder.date.from": "Erstellt zwischen 02.02.2020",
 	"utils.adminFilter.placeholder.date.until": "... und 03.03.2020",
