--- a/locale/en.json
+++ b/locale/en.json
@@ -13,7 +13,7 @@
 	"common.labels.teacher": "Teacher",
 	"common.labels.room": "Room",
 	"common.labels.status": "Status",
-	"components.legacy.footer.powered_by": "Powered by",
+	"components.legacy.footer.powered_by": "Translated by",
 	"components.legacy.footer.lokalise_logo_alt": "lokalise.com logo",
 	"components.legacy.footer.privacy_policy": "Privacy Policy",
 	"components.legacy.footer.imprint": "Imprint",
