--- a/locale/de.json
+++ b/locale/de.json
@@ -19,6 +19,7 @@
 	"common.labels.room": "Raum",
 	"common.labels.status": "Status",
 	"common.labels.teacher": "Lehrer:in",
+	"common.labels.registration": "Registrierung",
 	"common.placeholder.birthdate": "20.2.2002",
 	"common.placeholder.email": "clara.fall@mail.de",
 	"common.placeholder.firstName": "Klara",
@@ -173,6 +174,13 @@
 	"pages.administration.students.index.tableActions.email": "Registrierungslinks per E-Mail versenden",
 	"pages.administration.students.index.tableActions.qr": "Registrierungslinks als QR-Code ausdrucken",
 	"pages.administration.students.index.title": "Schüler:innen verwalten",
+	"pages.administration.students.infobox.paragraph-1": "Du hast folgende Möglichkeiten, die Nutzer:innen zum Abschluss der Registrierung zu führen:",
+	"pages.administration.students.infobox.paragraph-2": "Wähle dazu einen oder mehrere Nutzer:innen aus, z.B. alle Schüler:innen einer Klasse. Führe dann die gewünschte Aktion durch.",
+	"pages.administration.students.infobox.paragraph-3": "Alternativ möglich: Wechsele in den Bearbeiten-Modus des Nutzerprofils und rufe den individuellen Registrierungslink ab, um ihn händisch auf dem Weg deiner Wahl zu versenden.",
+	"pages.administration.students.infobox.paragraph-4": "WICHTIG: Bei Schüler:innen unter 16 Jahren wird während des Registrierungsprozesses als erstes die Zustimmung eines Erziehungsberechtigten verlangt. Wir empfehlen in diesem Fall, die Registrierungslinks als QR-Zettel zu verteilen oder die Links einzeln abzurufen und an die Eltern zu versenden. Nach Zustimmung der Eltern erhalten die Schüler:innen ein Startpasswort und können den letzten Teil der Registrierung jederzeit selbstständig abschließen. Für die Nutzung der Schul-Cloud an Grundschulen sind die Papierformulare eine beliebte Alternative.",
+	"pages.administration.students.infobox.li-1": "Versende über die Schul-Cloud Registrierungslinks an die hinterlegten E-Mail-Adressen (auch direkt beim Importieren/Anlegen möglich)",
+	"pages.administration.students.infobox.li-2": "Drucke die Registrierungslinks als QR-Druckbogen, schneide sie aus und verteile die QR-Zettel an Nutzer:innen (bzw. deren Eltern)",
+	"pages.administration.students.infobox.li-3": "Verzichte auf das digitale Einholen der Zustimmungen. Nutze stattdessen das Papierformular und generiere Startpasswörter für deine Nutzer:innen (Mehr Infos)",
 	"pages.administration.students.legend.icon.danger": "Keine Einverständniserklärungen vorhanden",
 	"pages.administration.students.legend.icon.success": "Alle Einverständniserklärungen vorhanden",
 	"pages.administration.students.legend.icon.warning": " Eltern haben zugestimmt",
