--- a/locale/de.json
+++ b/locale/de.json
@@ -16,6 +16,7 @@
 	"common.labels.firstName": "Vorname",
 	"common.labels.lastName": "Nachname",
 	"common.labels.name": "Name",
+	"common.labels.password": "Passwort",
 	"common.labels.room": "Raum",
 	"common.labels.status": "Status",
 	"common.labels.teacher": "Lehrer:in",
@@ -180,10 +181,11 @@
 	"pages.administration.students.new.error": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
 	"pages.administration.students.new.title": "Schüler:in hinzufügen",
+	"pages.administration.students.consent.info": "Du kannst im Namen deiner Schüler das Einverständnis zur Datenschutzerklärung und zur Nutzungsordnung der Schul-Cloud erklären, wenn du im Vorfeld das Einverständnis analog, per Handzettel, eingeholt hast.",
 	"pages.administration.students.consent.title": "Analoge Registrierung",
-	"pages.administration.students.consent.steps.confirm": "Bestätigen",
-	"pages.administration.students.consent.steps.logins": "Zugangsdaten",
-	"pages.administration.students.consent.steps.finish": "Abschließen",
+	"pages.administration.students.consent.steps.complete": "Daten ergänzen",
+	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
+	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
 	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
 	"pages.administration.teachers.index.remove.confirm.btnText": "Lehrer:in löschen",
