cancel warning modal, linting

--- a/locale/de.json
+++ b/locale/de.json
@@ -189,6 +189,10 @@
 	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
 	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
 	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
+	"pages.administration.students.consent.cancel.modal.title": "Bist du sicher?",
+	"pages.administration.students.consent.cancel.modal.info": "Achtung: Bist du sicher, dass du den Vorgang abbrechen möchtest? Vorgenommene Änderungen gehen dabei verloren.",
+	"pages.administration.students.consent.cancel.modal.continue": "Registrierung weiter machen",
+	"pages.administration.students.consent.cancel.modal.confirm": "Trotzdem abbrechen",
 	"pages.administration.teachers.fab.add": "Lehrer:in anlegen",
 	"pages.administration.teachers.fab.import": "Lehrer:innen importieren",
 	"pages.administration.teachers.index.remove.confirm.btnText": "Lehrer:in löschen",
