--- a/locale/de.json
+++ b/locale/de.json
@@ -184,11 +184,16 @@
 	"pages.administration.students.consent.info": "Du kannst im Namen deiner Schüler das Einverständnis zur Datenschutzerklärung und zur Nutzungsordnung der Schul-Cloud erklären, wenn du im Vorfeld das Einverständnis analog, per Handzettel, eingeholt hast.",
 	"pages.administration.students.consent.title": "Analoge Registrierung",
 	"pages.administration.students.consent.steps.complete": "Daten ergänzen",
-	"pages.administration.students.consent.steps.complete.confirm": "Hiermit bestätige ich, dass ich habe  die Einverständniserklärungen der Eltern auf Papierweg erhalten und die Regeln zur Einverständniserklärung gelesen.",
-	"pages.administration.students.consent.steps.complete.next": "Nutzer registrieren",
+	"pages.administration.students.consent.steps.complete.next": "Daten übernehmen",
+	"pages.administration.students.consent.steps.complete.info": "Achte drauf, dass die Geburtsdaten aller Nutzer:innen vollständig sind und ergänze fehlende gegebenenfalls.",
 	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
 	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
+	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich habe  die Einverständniserklärungen der Eltern auf Papierweg erhalten und die Regeln zur Einverständniserklärung gelesen.",
+	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
 	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
+	"pages.administration.students.consent.steps.download.info": "Speichere und drucke die Liste aus um sie anschließend den Nutzer:innen für ihre Erstanmeldung auszuhändigen.",
+	"pages.administration.students.consent.steps.download.explanation": "Das sind die Passwörter für die Erstanmeldung in der Schul-Cloud.\nBeim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen bei ihrem ersten Login die Einwilligungserklärung zusätzlich selbst erklären.",
+	"pages.administration.students.consent.steps.download.next": "Zugangsdaten herunterladen",
 	"pages.administration.students.consent.cancel.modal.title": "Bist du sicher?",
 	"pages.administration.students.consent.cancel.modal.info": "Achtung: Bist du sicher, dass du den Vorgang abbrechen möchtest? Vorgenommene Änderungen gehen dabei verloren.",
 	"pages.administration.students.consent.cancel.modal.continue": "Registrierung weiter machen",
