success screen and styling

--- a/locale/de.json
+++ b/locale/de.json
@@ -189,11 +189,16 @@
 	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
 	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
 	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich habe  die Einverständniserklärungen der Eltern auf Papierweg erhalten und die Regeln zur Einverständniserklärung gelesen.",
+	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
 	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
+	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
 	"pages.administration.students.consent.steps.download": "Zugangsdaten herunterladen",
 	"pages.administration.students.consent.steps.download.info": "Speichere und drucke die Liste aus um sie anschließend den Nutzer:innen für ihre Erstanmeldung auszuhändigen.",
 	"pages.administration.students.consent.steps.download.explanation": "Das sind die Passwörter für die Erstanmeldung in der Schul-Cloud.\nBeim ersten Login muss ein neues Passwort gewählt werden. Schüler, die mindestens 14 Jahre alt sind, müssen bei ihrem ersten Login die Einwilligungserklärung zusätzlich selbst erklären.",
 	"pages.administration.students.consent.steps.download.next": "Zugangsdaten herunterladen",
+	"pages.administration.students.consent.steps.success": "Glückwunsch, du hast die analoge Registrierung erfolgreich durchgeführt!",
+	"pages.administration.students.consent.steps.success.back": "Zurück zur Übersicht",
+	"pages.administration.students.consent.steps.success.image.alt": "Sicher Verbunden Grafik",
 	"pages.administration.students.consent.cancel.modal.title": "Bist du sicher?",
 	"pages.administration.students.consent.cancel.modal.info": "Achtung: Bist du sicher, dass du den Vorgang abbrechen möchtest? Vorgenommene Änderungen gehen dabei verloren.",
 	"pages.administration.students.consent.cancel.modal.continue": "Registrierung weiter machen",
