add registration/login button in nav --no-verify

--- a/locale/de.json
+++ b/locale/de.json
@@ -15,7 +15,9 @@
 	"common.labels.email": "E-Mail",
 	"common.labels.firstName": "Vorname",
 	"common.labels.lastName": "Nachname",
+	"common.labels.login": "Login",
 	"common.labels.name": "Name",
+	"common.labels.register": "Registrieren",
 	"common.labels.room": "Raum",
 	"common.labels.status": "Status",
 	"common.labels.teacher": "Lehrer:in",
