SC-3686: admin tables - table head adjusted to accept the second row

--- a/locale/de.json
+++ b/locale/de.json
@@ -11,6 +11,8 @@
 	"common.labels.complete.firstName": "Vollständiger Vorname",
 	"common.labels.complete.lastName": "Vollständiger Nachname",
 	"common.labels.consent": "Einverständnis",
+	"common.labels.consent.parents": "Eltern",
+	"common.labels.consent.students": "Schüler",
 	"common.labels.createdAt": "Erstellungsdatum",
 	"common.labels.email": "E-Mail",
 	"common.labels.firstName": "Vorname",
