SC-3686: admin tables consent - table row adjusted to show separate consents for students and for teachers, icon added for indicating that the email with a registration link was sent, changes introduced for the student page and reverted for the teacher page, new labels

--- a/locale/de.json
+++ b/locale/de.json
@@ -176,9 +176,9 @@
 	"pages.administration.students.index.tableActions.email": "Registrierungslinks per E-Mail versenden",
 	"pages.administration.students.index.tableActions.qr": "Registrierungslinks als QR-Code ausdrucken",
 	"pages.administration.students.index.title": "Schüler:innen verwalten",
-	"pages.administration.students.legend.icon.danger": "Keine Einverständniserklärungen vorhanden",
-	"pages.administration.students.legend.icon.success": "Alle Einverständniserklärungen vorhanden",
-	"pages.administration.students.legend.icon.warning": " Eltern haben zugestimmt",
+	"pages.administration.students.legend.icon.email": "Registrierungslink per Mail versandt",
+	"pages.administration.students.legend.icon.success": "Einverständniserklärung vorhanden",
+	"pages.administration.students.legend.icon.missing": " Einverständniserklärung fehlt",
 	"pages.administration.students.new.checkbox.label": "Registrierungslink an Schüler:in senden",
 	"pages.administration.students.new.error": "Schüler:in konnte nicht erfolgreich hinzugefügt werden. Möglicherweise existiert die E-Mail-Adresse bereits.",
 	"pages.administration.students.new.success": "Schüler:in erfolgreich angelegt!",
