--- a/locale/de.json
+++ b/locale/de.json
@@ -52,6 +52,10 @@
 	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
 	"components.molecules.LoginWindows.login": "Login",
 	"components.molecules.LoginWindows.bundesland": "In welchem Bundesland möchtest du dich einloggen?",
+	"components.molecules.LoginWindows.hpi_link": "https://open.schul-cloud.org/login",
+	"components.molecules.LoginWindows.brb_link": "https://brandenburg.schul-cloud.org/login",
+	"components.molecules.LoginWindows.n21_link": "https://niedersachsen.cloud/login",
+	"components.molecules.LoginWindows.thr_link": "https://schulcloud-thueringen.de/login",
 	"components.organisms.AutoLogoutWarning.confirm": "Sitzung verlängern",
 	"components.organisms.AutoLogoutWarning.error": "Uups… das hätte nicht passieren dürfen! Deine Sitzung konnte nicht verlängert werden. Bitte versuche es gleich noch einmal.",
 	"components.organisms.AutoLogoutWarning.error.401": "Deine Sitzung ist bereits abgelaufen. Bitte melde dich erneut an.",
