changes due to review

--- a/locale/de.json
+++ b/locale/de.json
@@ -50,12 +50,6 @@
 	"components.molecules.admintablelegend.externalSync": "Die Nutzerdaten deiner Schule werden aus einer externen Quelle (LDAP, IDM o.ä.) synchronisiert. Die Bearbeitung der Nutzer:innen-Stammdaten ist deshalb nur im Quellsystem möglich, nicht in der {shortName}. Finde weitere Informationen im",
 	"components.molecules.admintablelegend.help": "Hilfebereich",
 	"components.molecules.admintablelegend.hint": "Mit allen Änderungen und Einstellungen im Verwaltungsbereich bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind, Anpassungen an der Schule in der Schul-Cloud vorzunehmen. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.",
-	"components.molecules.LoginWindows.login": "Einloggen",
-	"components.molecules.LoginWindows.bundesland": "In welchem Bundesland möchtest du dich einloggen?",
-	"components.molecules.LoginWindows.hpi_link": "https://open.schul-cloud.org/login",
-	"components.molecules.LoginWindows.brb_link": "https://brandenburg.schul-cloud.org/login",
-	"components.molecules.LoginWindows.n21_link": "https://niedersachsen.cloud/login",
-	"components.molecules.LoginWindows.thr_link": "https://schulcloud-thueringen.de/login",
 	"components.organisms.AutoLogoutWarning.confirm": "Sitzung verlängern",
 	"components.organisms.AutoLogoutWarning.error": "Uups… das hätte nicht passieren dürfen! Deine Sitzung konnte nicht verlängert werden. Bitte versuche es gleich noch einmal.",
 	"components.organisms.AutoLogoutWarning.error.401": "Deine Sitzung ist bereits abgelaufen. Bitte melde dich erneut an.",
@@ -214,6 +208,12 @@
 	"pages.courses.new.btn_new": "Erstelle neuen Kurs",
 	"pages.courses.new.title": "Neuen Kurs erstellen",
 	"pages.impressum.title": "Impressum",
+	"pages.loginInstances.login": "Einloggen",
+	"pages.loginInstances.bundesland": "In welchem Bundesland möchtest du dich einloggen?",
+	"pages.loginInstances.hpi_link": "https://open.schul-cloud.org/login",
+	"pages.loginInstances.brb_link": "https://brandenburg.schul-cloud.org/login",
+	"pages.loginInstances.n21_link": "https://niedersachsen.cloud/login",
+	"pages.loginInstances.thr_link": "https://schulcloud-thueringen.de/login",
 	"pages.mint-ec.article.footer.anbieter": "Inhalteanbieter: inhalte@schul-cloud.org",
 	"pages.mint-ec.article.footer.datasecurity": "Datenschutz und Urheberrecht",
 	"pages.mint-ec.article.footer.datenschutz": "Datenschutzerklärung HPI",
