--- a/locale/en.json
+++ b/locale/en.json
@@ -33,8 +33,6 @@
 	"components.molecules.ContextMenu.action.close": "Close context menu",
 	"components.molecules.MintEcFooter.chapters": "Chapter overview",
 	"components.molecules.TextEditor.noLocalFiles": "",
-	"components.molecules.LoginWindows.login": "Login",
-	"components.molecules.LoginWindows.bundesland": "In which state would you like to log in?",
 	"components.organisms.ContentCard.report.body": "",
 	"components.organisms.ContentCard.report.email": "inhalte@schul-cloud.org",
 	"components.organisms.ContentCard.report.subject": "",
@@ -96,6 +94,8 @@
 	"pages.courses.new.btn_new": "Create",
 	"pages.courses.new.title": "Create new course",
 	"pages.impressum.title": "Imprint",
+	"pages.loginInstances.login": "Login",
+	"pages.loginInstances.bundesland": "In which state would you like to log in?",
 	"pages.mint-ec.article.footer.anbieter": "",
 	"pages.mint-ec.article.footer.datasecurity": "",
 	"pages.mint-ec.article.footer.datenschutz": "",
