--- a/locale/de.json
+++ b/locale/de.json
@@ -23,6 +23,7 @@
 	"common.labels.status": "Status",
 	"common.labels.teacher": "Lehrer:in",
 	"common.placeholder.birthdate": "20.2.2002",
+	"common.placeholder.dateformat": "TT.MM.JJJJ",
 	"common.placeholder.email": "clara.fall@mail.de",
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
@@ -191,7 +192,7 @@
 	"pages.administration.students.consent.steps.complete.info": "Achte drauf, dass die Geburtsdaten aller Nutzer:innen vollständig sind und ergänze fehlende gegebenenfalls.",
 	"pages.administration.students.consent.steps.register": "Registrierung durchführen",
 	"pages.administration.students.consent.steps.register.info": "Überprüfe, ob du das Einverständnis der aufgelisteten Schüler:innen analog per Handzettel erhalten hast, befor du die Registrierung im Namen der Nutzer:innen durchführst.",
-	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich habe  die Einverständniserklärungen der Eltern auf Papierweg erhalten und die Regeln zur Einverständniserklärung gelesen.",
+	"pages.administration.students.consent.steps.register.confirm": "Hiermit bestätige ich, dass ich die Einverständniserklärungen der Eltern auf Papierweg erhalten und die Regeln zur Einverständniserklärung gelesen habe.",
 	"pages.administration.students.consent.steps.register.confirm.warn": "Bitte bestätige, dass du die Einverständniserklärungen von Eltern und Schülern auf Papierweg erhalten und die Regeln zur Einverständniserklärung durchgelesen hast.",
 	"pages.administration.students.consent.steps.register.next": "Nutzer registrieren",
 	"pages.administration.students.consent.steps.register.success": "Nutzer erfolgreich registriert",
