--no-verify WIP added AccountCard and account page

--- a/locale/de.json
+++ b/locale/de.json
@@ -128,6 +128,13 @@
 	"layouts.loggedoutFullWidth.join": "Mitmachen",
 	"layouts.loggedoutFullWidth.project": "Über das Projekt",
 	"layouts.loggedoutFullWidth.steps": "Erste Schritte",
+	"pages.account.button.user.data": "Nutzerdaten ändern",
+	"pages.account.button.user.email": "E-mail ändern",
+	"pages.account.button.user.password": "Passwort ändern",
+	"pages.account.index.title": "Account",
+	"pages.account.index.user.data": "Aktuelle Nutzerdaten:",
+	"pages.account.index.user.email": "Aktuelle E-mail Adresse:",
+	"pages.account.index.user.password": "Aktuelles Passwort:",
 	"pages.administraion.datasources.index.empty": "Noch keine Daten Importiert",
 	"pages.administraion.datasources.index.error": "Letzter Import fehlgeschlagen: {relativeDate}",
 	"pages.administraion.datasources.index.pending": "In Arbeit",
