--no-verify add FormUserData email/edit page WIP

--- a/locale/de.json
+++ b/locale/de.json
@@ -17,14 +17,18 @@
 	"common.labels.lastName": "Nachname",
 	"common.labels.login": "Login",
 	"common.labels.name": "Name",
+	"common.labels.password": "Passwort",
 	"common.labels.register": "Registrieren",
 	"common.labels.room": "Raum",
 	"common.labels.status": "Status",
 	"common.labels.teacher": "Lehrer:in",
 	"common.placeholder.birthdate": "20.2.2002",
 	"common.placeholder.email": "clara.fall@mail.de",
+	"common.placeholder.email.update": "Neue E-mail Adresse",
+	"common.placeholder.email.confirmation": "E-mail Adresse wiederholen",
 	"common.placeholder.firstName": "Klara",
 	"common.placeholder.lastName": "Fall",
+	"common.placeholder.password.confirmation": "Bestätigung durch Passwort",
 	"common.words.and": "und",
 	"componente.molecules.CoursesGrid.emptystate": "Aktuell gibt es hier noch keine Kurse.",
 	"components.legacy.footer.about": "Über das Projekt",
